--- a/src/tools/singlejar/BUILD
+++ b/src/tools/singlejar/BUILD
@@ -1,5 +1,6 @@
 load("@rules_java//java:defs.bzl", "java_library")
 load("//src:release_archive.bzl", "release_archive")
+load("//src:darwin_universal_binary.bzl", "darwin_universal_binary")
 
 # Description:
 #   singlejar C++ implementation.
@@ -64,7 +65,7 @@ release_archive(
 
 release_archive(
     name = "singlejar_deploy_zip",
-    srcs = [":singlejar_local"],
+    srcs = [":singlejar_local_binary_for_deploy"],
     package_dir = "java_tools/src/tools/singlejar",
     visibility = ["//src:__pkg__"],
 )
@@ -86,6 +87,20 @@ cc_binary(
         "output_jar",
         "//third_party/zlib",
     ],
+)
+
+alias(
+    name = "singlejar_local_binary_for_deploy",
+    actual = select({
+        "//src/conditions:darwin": ":singlejar_local_darwin",
+        "//conditions:default": ":singlejar_local",
+    })
+)
+
+darwin_universal_binary(
+    name = "singlejar_local_darwin",
+    binary = ":singlejar_local",
+    output_name = "singlejar_local",
 )
 
 cc_binary(
